[package]
name = "seance"
version = "0.1.0"
authors = ["keeeal <james@keal.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_interact_2d = "0.5.3"
bevy_kira_audio = {version="0.5.0", features=["mp3"]}
rand = "0.8.3"
